# hcert-schema

./: Makefile  README.md  eu_dgc_v1_schema.json  eu_dgc_v1_schema.yaml  eu_dgc_v1_schema_draft_07.json  eu_hcert_v11_schema.yaml  eu_hcert_v1_schema.json  eu_hcert_v1_schema.yaml  eu_hcert_v1_schema_draft_07.json  pyproject.toml  schemacheck.py
.github/workflows/: test.yml
