[tool.poetry]
name = "schemacheck"
version = "0.0.0"
description = "JSON Schema Utility"
authors = ["Jakob Schlyter <jakob@kirei.se>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^3.2.0"
PyYAML = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
